--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "nodemailer": "^6.9.9",
+    "sanitize": "^2.1.2",
     "winston": "^3.11.0",
     "winston-mongodb": "^5.1.1"
   },
